# wblist-rs

./: Cargo.toml  README.md
resources/: wblist.json
src/: browser.rs  browser_list.rs  lib.rs  list.rs  wblist.rs
tests/: basic.rs
