# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wblist"
version = "0.1.0"
description = "A Rust library to get the list of browsers installed in Windows OS"
repository = "https://github.com/U-C-S/wblist-rs"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
registry = { git = "https://github.com/bbqsrc/registry-rs", rev = "refs/pull/5/head", version = "1.2.1" }
regex = "1.5"
dirs = "4.0.0"
